--- a/MOB_AI/package.json
+++ b/MOB_AI/package.json
@@ -12,11 +12,10 @@
     "expo": "~54.0.33",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
+    "react-icons": "^5.5.0",
     "react-native": "0.81.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-icons": "^5.5.0"
-
-
+    "react-native-svg": "^15.15.3"
   },
   "private": true
 }
