--- a/MOB_AI/app.json
+++ b/MOB_AI/app.json
@@ -4,7 +4,7 @@
     "slug": "MOB_AI",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/Logo.svg",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
