--- a/MOB_AI/package.json
+++ b/MOB_AI/package.json
@@ -21,7 +21,8 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1"
+    "react-native-svg": "^15.12.1",
+    "@react-native-picker/picker": "^2.7.0"
   },
   "private": true,
   "devDependencies": {
