--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,6 @@ DB_USER=postgres.wsllmnfvfguzqcgdkhga
 DB_PASSWORD=HHSjhUZPcqVisLw8
 DB_HOST=aws-1-eu-central-1.pooler.supabase.com
 DB_PORT=6543
+
+# AI Decision Layer
+MISTRAL_API_KEY=LbvwINVI5Ajy7aWCEJX9uG2K8hPW7eL4
