--- a/MOB_AI/package.json
+++ b/MOB_AI/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/netinfo": "^11.5.2",
+    "@react-native-picker/picker": "^2.7.0",
     "@react-navigation/bottom-tabs": "^7.13.0",
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.7.1",
@@ -21,8 +23,7 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
-    "@react-native-picker/picker": "^2.7.0"
+    "react-native-svg": "^15.12.1"
   },
   "private": true,
   "devDependencies": {
