added AI output to admin

--- a/backend/.env
+++ b/backend/.env
@@ -6,3 +6,9 @@ DB_PORT=6543
 
 # AI Decision Layer
 MISTRAL_API_KEY=LbvwINVI5Ajy7aWCEJX9uG2K8hPW7eL4
+MISTRAL_MODEL=mistral-tiny
+# MISTRAL_MODEL=mistral-small-latest
+
+# Django Settings
+SECRET_KEY=django-insecure-6$^l#-$dx)$_flc5x%2@%bj^1h!0eg$46ulvz#m^8)!h&3p*m6
+DEBUG=True
