--- a/MOB_AI/package.json
+++ b/MOB_AI/package.json
@@ -16,14 +16,18 @@
     "@react-navigation/native": "^7.1.28",
     "@react-navigation/stack": "^7.7.1",
     "expo": "~54.0.33",
+    "expo-barcode-scanner": "^13.0.1",
+    "expo-camera": "^17.0.10",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
     "react-icons": "^5.5.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "^4.2.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1"
+    "react-native-svg": "^15.12.1",
+    "react-native-worklets-core": "^1.6.3"
   },
   "private": true,
   "devDependencies": {
